--- a/serverless.yml
+++ b/serverless.yml
@@ -45,10 +45,21 @@ functions:
           arn: 
             Fn::GetAtt: [PendingOrderQueue, Arn]
           batchSize: 1
+  sentOrder:
+    handler: handler.sentOrder
+    events:
+        - sqs:
+          arn: 
+            Fn::GetAtt: [SentOrderQueue, Arn]
+          batchSize: 1      
           
 resources: # Cloudformation template syntax
   Resources:
     PendingOrderQueue:
       Type: AWS::SQS::Queue
       Properties:
-        QueueName: pendingOrderQueue          
+        QueueName: pendingOrderQueue
+    SentOrderQueue:
+      Type: AWS::SQS::Queue
+      Properties:
+        QueueName: SentOrderQueue              
